--- a/Lens_Cart/src/main/resources/application.properties
+++ b/Lens_Cart/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-
+server.port=9001
 spring.data.mongodb.database=lenscart_application
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+
+spring.application.name=Lens_Cart
+eureka.instance.hostname= localhost
