--- a/springcloud_gateway/pom.xml
+++ b/springcloud_gateway/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.7.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.es</groupId>
-	<artifactId>eureka_server</artifactId>
+	<groupId>com.example</groupId>
+	<artifactId>springcloud_gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>eureka_server</name>
+	<name>springcloud_gateway</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -19,13 +19,19 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-dependencies</artifactId>
+    <version>2021.0.3</version>
+    <type>pom</type>
+</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
